Merge Freeze to Master (#234)
* PUB-1678 Java 17 upgrade (#231)

* Upgraded to java 17

* Update to use new java features

* Update to use new java features

* Vulns

Co-authored-by: KianKwa <kian.kwa@justice.gov.uk>

* Updated suppressions (#232)

Co-authored-by: Josh <joshblackmoor@users.noreply.github.com>
Co-authored-by: KianKwa <kian.kwa@justice.gov.uk>